@@ -70,7 +70,8 @@ version 1.11.2 Neera (????-??-??):
   - lmsd/hostfile: added %port variable (alec)
   - lms-mgc: added %PORT variable in nodes rules (alec)
   - added SQL functions mask2prefix() and broadcast() (alec)
-  - added IMMUTABLE flag for inet_ntoa/inet_aton functions on postgres (alec) 
+  - added IMMUTABLE flag for inet_ntoa/inet_aton functions on postgres (alec)
+  - networks: few functions optimized (alec)  
 
 version 1.11.1 Talus (2007-12-03):
 
